Fix overlap axis 0 https://github.com/jamstack/jamstack.org/pull/656#issuecomment-934706584

--- a/src/css/d3chart.css
+++ b/src/css/d3chart.css
@@ -144,6 +144,12 @@
 .d3chart-bubble-active .d3chart-bubblecircle.active {
 	fill-opacity: 1;
 }
+.d3chart-bubble .d3chart-yaxis .tick:last-child text {
+	display: none;
+}
+.d3chart-bubble .d3chart-xaxis .tick text {
+	transform: translateY(2px);
+}
 
 /* Color gradients */
 .d3chart-color-0 {
